syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package com.prodonik.genprotos;

// ----------------------------------- Products service -------------------------------------------- //

message Product {
    string id = 1;
    string name = 2;
    google.protobuf.StringValue description = 3;
    double price = 4;
    int32 stock_quantity = 5;
    string category_id = 6;
    string seller_id = 7;
}

message ProductId {
    string id = 1;
}

message ProductName {
    string name = 1;
}

message ProductRequest {
    Product product = 1;
}

message DeleteProductRequest {
    string id = 1;
}

message GetAllProductsResponse {
    repeated Product products = 1;
}

message GetByRequest {
    string reuier = 1;
}

message GetByResponse {
    repeated Product products = 1;
}

service ProductService {
    rpc CreateProduct(ProductRequest) returns (Product);
    rpc UpdateProduct(ProductRequest) returns (Product);
    rpc GetProductById(ProductId) returns (Product);
    rpc GetProductByName(ProductName) returns (Product);
    rpc GetAllProducts(google.protobuf.Empty) returns (GetAllProductsResponse);
    rpc DeleteProduct(DeleteProductRequest) returns (google.protobuf.Empty);
    rpc GetProductsByCategoryName(GetByRequest) returns (GetByResponse);
    rpc GetProductsByCategoryId(GetByRequest) returns (GetByResponse);
}

// ----------------------------------- Purchase service -------------------------------------------- //

message RemoveProductsRequest {
    string product_id = 1;
    int32 number_of_products = 2;
    string client_id = 3;
}

message RemoveProductsResponse {
    string message = 1;
    bool error_occured = 2;
}

service PurchaseService {
    rpc RemoveProducts(RemoveProductsRequest) returns (RemoveProductsResponse);
}

// ----------------------------------- Category service -------------------------------------------- //

message Category {
    string category_id = 1;
    string name = 2;
    google.protobuf.StringValue description = 3;
}

message CategoryId {
    string id = 1;
}

message CategoryName {
    string name = 1;
}

message CategoryRequest {
    Category category = 1;
}

message DeleteCategoryRequest {
    string id = 1;
}

message GetAllCategoriesResponse {
    repeated Category categories = 1;
}

service CategoryService {
    rpc CreateCategory(CategoryRequest) returns (Category);
    rpc UpdateCategory(CategoryRequest) returns (Category);
    rpc GetCategoryById(CategoryId) returns (Category);
    rpc GetCategoryByName(CategoryName) returns (Category);
    rpc GetAllCategories(google.protobuf.Empty) returns (GetAllCategoriesResponse);
    rpc DeleteCategory(DeleteCategoryRequest) returns (google.protobuf.Empty);
}


// ----------------------------------- History service -------------------------------------------- //

message GetProductsHistoryRequest {
    string client_id = 1;
}

message CreateProductsHistoryRequest {
    string product_id = 1;
    int32 number_of_bought_products = 2;
    string client_id = 3;
    google.protobuf.Timestamp bought_at = 4;
}

message ProductsHistoryResponse {
    string history_id = 1;
    string product_id = 2;
    int32 number_of_bought_products = 3;
    string client_id = 4;
    google.protobuf.Timestamp bought_at = 5;
}

message CreateProductsHistoryResponse {
    string history_id = 1;
    string product_id = 2;
    int32 number_of_bought_products = 3;
    string client_id = 4;
    google.protobuf.Timestamp bought_at = 5;
}

message GetProductsHistoryResponse {
    repeated CreateProductsHistoryResponse products = 1;
}

service HistoryService {
    rpc GetProductsHistory(GetProductsHistoryRequest) returns (GetProductsHistoryResponse);
    rpc CreateHistory(CreateProductsHistoryRequest) returns (CreateProductsHistoryResponse);
}
